added more aliases and more documentation

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -12,7 +12,7 @@
 # // alternative: to scroll in terminal only when needed
 # // enters tmux scroll mode
 # ctrl+b [ 
-# // to exit just press 'esc' or ctrl+c if that doesn't work
+# // to exit just press 'q' or 'esc' or ctrl+c if that doesn't work
 
 # // set pane border
 set -g pane-border-style 'bg=colour236,fg=colour238' # grey 27 font
@@ -47,10 +47,12 @@ bind l select-pane -R
 # ctrl+b t
 # // to exit just press enter
 
+# // RESIZE a PANE Up/Down/Left/Right
+# :resize-pane -(U/D/L/R) (# of cells)
 
 # // ZOOM in & out of a PANE (fullscreen)
 # ctrl+b z
-# // to exit a PANE just type exit and press enter 
+# // to EXIT a PANE just type exit and press enter 
 # $ exit
 # // alternatively:
 # ctrl+b x
