changed status bar on tmux to have more subtle text

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -27,7 +27,8 @@ set -g status-bg colour233 # grey7
 #set -g status-bg colour234 # grey11
 #set -g status-bg colour235 # grey15
 # // set status bar foreground color
-set -g status-fg colour255
+#set -g status-fg colour255 # grey93
+set -g status-fg colour244 # grey50
 
 # // flash the PANE numbers
 # ctrl+b q
