more custom tmux setup

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -14,13 +14,15 @@
 # ctrl+b [ 
 # // to exit just press 'q' or 'esc' or ctrl+c if that doesn't work
 
-# // set pane border
+# // PANE settings 
 set -g pane-border-style 'bg=colour236,fg=colour238' # grey 27 font
 set -g pane-active-border-style 'bg=colour236,fg=colour5' # purple font
-# // set inactive / active window styles
-set -g window-style 'bg=colour236,fg=colour247'
-set -g window-active-style 'bg=black,fg=colour250'
 
+# // WINDOW settings 
+set -g window-style 'bg=colour236,fg=colour247' #// inactive style
+set -g window-active-style 'bg=black,fg=colour250' #// active style
+
+#// STATUS BAR settings
 # // set status bar background color
 #set -g status-bg colour53 # deep pink4
 set -g status-bg colour233 # grey7
@@ -29,6 +31,8 @@ set -g status-bg colour233 # grey7
 # // set status bar foreground color
 #set -g status-fg colour255 # grey93
 set -g status-fg colour244 # grey50
+set -g status-right-length 100
+set -g status-right "#H %Y-%m%b-%d%a %T %Z"
 
 # // flash the PANE numbers
 # ctrl+b q
