added a new note

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -66,7 +66,7 @@ bind l select-pane -R
 # // CREATE a new WINDOW
 # ctrl+b c
 # // RENAME the current WINDOW
-# ctrl+b ,
+# ctrl+b , || :rename-window <new-name>
 
 # // to go to a WINDOW use the window key '#'
 # ctrl+b <window #> 
