just some fixes for broken vim commands and mac setup

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -4,6 +4,11 @@
 # // RELOAD TMUX
 # :source ~/.tmux.conf
 
+# // change leader key / prefix to backtick
+unbind C-b
+set-option -g prefix `
+bind ` send-prefix
+
 # // turn on ability to mouse scroll
 # // note: only works in terminal and not vim/neovim
 # // if off then can scroll in vim/neovim but not terminal
