Fixed tmux coloring

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -20,17 +20,17 @@ bind ` send-prefix
 # // to exit just press 'q' or 'esc' or ctrl+c if that doesn't work
 
 # // PANE settings 
-set -g pane-border-style 'bg=colour233,fg=colour238' # grey 27 font
-set -g pane-active-border-style 'bg=colour233,fg=colour5' # purple font
+set -g pane-border-style 'bg=colour234,fg=colour238' # grey 27 font
+set -g pane-active-border-style 'bg=colour234,fg=colour5' # purple font
 
 # // WINDOW settings 
-set -g window-style 'bg=colour233,fg=colour247' #// inactive style
-set -g window-active-style 'bg=black,fg=colour250' #// active style
+set -g window-style 'bg=colour234,fg=colour247' #// inactive style
+set -g window-active-style 'bg=colour232,fg=colour244' #// active style
 
 #// STATUS BAR settings
 # // set status bar background color
 #set -g status-bg colour53 # deep pink4
-set -g status-bg colour233 # grey7
+set -g status-bg colour234 # grey11
 #set -g status-bg colour234 # grey11
 #set -g status-bg colour235 # grey15
 # // set status bar foreground color
