added missing setup steps and fixed some configs for bash and tmux

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -38,6 +38,7 @@ set -g status-bg colour234 # grey11
 set -g status-fg colour244 # grey50
 set -g status-right-length 100
 set -g status-right "#H %Y-%m%b-%d%a %T %Z"
+# // note: hostname is weird if you don't have your VPN on 
 
 # // flash the PANE numbers
 # ctrl+b q
