turned off tmux new leader binding

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -5,9 +5,9 @@
 # :source ~/.tmux.conf
 
 # // change leader key / prefix to backtick
-unbind C-b
-set-option -g prefix `
-bind ` send-prefix
+#unbind C-b
+#set-option -g prefix `
+#bind ` send-prefix
 
 # // turn on ability to mouse scroll
 # // note: only works in terminal and not vim/neovim
