--- a/.tmux.conf
+++ b/.tmux.conf
@@ -4,8 +4,8 @@
 # // RELOAD TMUX
 # :source ~/.tmux.conf
 
-# // change leader key / prefix to backtick
-if-shell '"uname | grep -q Linux" = 0' "\
+# // change leader key / prefix to backtick only for MAC
+if-shell "uname | grep -q Darwin" "\
     unbind C-b; \
     set-option -g prefix `; \
     bind ` send-prefix"
