just reordering the notes and settings

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,14 +1,17 @@
-# TMUX
-# // open tmux command line
-# ctrl+b : 
-# // RELOAD TMUX
-# :source ~/.tmux.conf
+# // TMUX
 
-# // change leader key / prefix to backtick only for MAC
+# --- --- ---
+
+# // change <leader> / <prefix> key to backtick only for MAC
 if-shell "uname | grep -q Darwin" "\
     unbind C-b; \
     set-option -g prefix `; \
     bind ` send-prefix"
+
+# // open tmux command line
+# <leader> : 
+# // RELOAD TMUX
+# :source ~/.tmux.conf
 
 # // turn on ability to mouse scroll
 # // note: only works in terminal and not vim/neovim
@@ -17,18 +20,13 @@ if-shell "uname | grep -q Darwin" "\
 
 # // alternative: to scroll in terminal only when needed
 # // enters tmux scroll mode
-# ctrl+b [ 
+# // enter COPY MODE
+# <leader> [ 
 # // to exit just press 'q' or 'esc' or ctrl+c if that doesn't work
 
-# // PANE settings 
-set -g pane-border-style 'bg=colour234,fg=colour238' # grey 27 font
-set -g pane-active-border-style 'bg=colour234,fg=colour5' # purple font
 
-# // WINDOW settings 
-set -g window-style 'bg=colour234,fg=colour247' #// inactive style
-set -g window-active-style 'bg=colour232,fg=colour244' #// active style
+# // STATUS BAR
 
-#// STATUS BAR settings
 # // set status bar background color
 #set -g status-bg colour53 # deep pink4
 set -g status-bg colour234 # grey11
@@ -41,51 +39,12 @@ set -g status-right-length 100
 set -g status-right "#H %Y-%m%b-%d%a %T %Z"
 # // note: hostname is weird if you don't have your VPN on 
 
-# // flash the PANE numbers
-# ctrl+b q
-
-# // create a new Vertical PANE 
-# ctrl+b %
-# // create a new Horizontal PANE
-# ctrl+b " 
-# // Navigate between PANE 
-# ctrl+b <left-arrow>|<up-arrow>|<down-arrow>|<right-arrow>
-bind h select-pane -L
-bind j select-pane -D
-bind k select-pane -U
-bind l select-pane -R
-
 # // open time
-# ctrl+b t
+# <leader> t
 # // to exit just press enter
 
-# // RESIZE a PANE Up/Down/Left/Right
-# :resize-pane -(U/D/L/R) (# of cells)
 
-# // ZOOM in & out of a PANE (fullscreen)
-# ctrl+b z
-# // to EXIT a PANE just type exit and press enter 
-# $ exit
-# // alternatively:
-# ctrl+b x
-
-
-# // CREATE a new WINDOW
-# ctrl+b c
-# // RENAME the current WINDOW
-# ctrl+b , || :rename-window <new-name>
-
-# // to go to a WINDOW use the window key '#'
-# ctrl+b <window #> 
-# // to go to Next WINDOW (to the window after this one)
-# ctrl+b n 
-# // to go to Previous WINDOW (to the window before this one)
-# ctrl+b p
-# // to go to Last WINDOW (to flip between current and last active window)
-# ctrl+b l
-# // to exit a WINDOW just type exit and press enter 
-# $ exit
-
+# // SESSION 
 
 # // to create a NEW SESSION
 # $ tmux (new -s <session-name>) 
@@ -98,11 +57,69 @@ bind l select-pane -R
 # // to LIST all SESSIONS
 # $ tmux ls
 # // to DETACH from a SESSION
-# ctrl+b d
+# <leader> d
 # // to ATTACH to a (target) SESSION
 # $ tmux attach -t <session-name|ex:n=0-99>
 
-# // enter COPY MODE
-# ctrl+b [
 
+# // WINDOW 
+
+# // settings 
+set -g base-index 1
+set -g window-style 'bg=colour234,fg=colour247' #// inactive style
+set -g window-active-style 'bg=colour232,fg=colour244' #// active style
+
+# // create a new window
+# <leader> c
+# // rename the current window
+# <leader> , 
+# OR
+# :rename-window <new-name>
+
+# // to go to a WINDOW use the window key '#'
+# <leader> <window #> 
+# // to go to Next WINDOW (to the window after this one)
+# <leader> n 
+# // to go to Previous WINDOW (to the window before this one)
+# <leader> p
+# // to go to Last WINDOW (to flip between current and last active window)
+# <leader> l
+# // to exit a WINDOW just type exit and press enter 
+# $ exit
+
+
+# // PANE 
+
+# // settings 
+set -g pane-base-index 1
+set -g pane-border-style 'bg=colour234,fg=colour238' # grey 27 font
+set -g pane-active-border-style 'bg=colour234,fg=colour5' # purple font
+
+# // create a new Vertical PANE 
+# ctrl+b %
+# // create a new Horizontal PANE
+# ctrl+b " 
+# // Navigate between PANE 
+# ctrl+b <left-arrow>|<up-arrow>|<down-arrow>|<right-arrow>
+bind h select-pane -L
+bind j select-pane -D
+bind k select-pane -U
+bind l select-pane -R
+
+# // RESIZE a PANE Up/Down/Left/Right
+# :resize-pane -(U/D/L/R) (# of cells)
+
+# // show / flash pane numbers
+# <leader> q
+# // just press the index to go to that pane after it is flashed
+
+# // ZOOM in & out of a PANE (fullscreen)
+# <leader> z
+# // to EXIT a PANE just type exit and press enter 
+# $ exit
+# // alternatively:
+# <leader> x
+
+
+# --- --- ---
 
