fixed notes and added toggle pane layout

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -96,15 +96,19 @@ set -g pane-border-style 'bg=colour234,fg=colour238' # grey 27 font
 set -g pane-active-border-style 'bg=colour234,fg=colour5' # purple font
 
 # // create a new Vertical PANE 
-# ctrl+b %
+# <leader> %
 # // create a new Horizontal PANE
-# ctrl+b " 
+# <leader> " 
+
 # // Navigate between PANE 
-# ctrl+b <left-arrow>|<up-arrow>|<down-arrow>|<right-arrow>
+# <leader> <left-arrow>|<up-arrow>|<down-arrow>|<right-arrow>
 bind h select-pane -L
 bind j select-pane -D
 bind k select-pane -U
 bind l select-pane -R
+
+# // toggle between pane layouts like quadrants
+# <leader> <space>
 
 # // RESIZE a PANE Up/Down/Left/Right
 # :resize-pane -(U/D/L/R) (# of cells)
