added some notes to tmux configuration

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -7,6 +7,7 @@ if-shell "uname | grep -q Darwin" "\
     unbind C-b; \
     set-option -g prefix `; \
     bind ` send-prefix"
+#:endif
 
 # // open tmux command line
 # <leader> : 
@@ -36,8 +37,9 @@ set -g status-bg colour234 # grey11
 #set -g status-fg colour255 # grey93
 set -g status-fg colour244 # grey50
 set -g status-right-length 100
+#set -g status-right "[#(battery Discharge)] %Y-%m%b-%d%a %T %Z"
 set -g status-right "#H %Y-%m%b-%d%a %T %Z"
-# // note: hostname is weird if you don't have your VPN on 
+# // note: #H / hostname is weird if you don't have your VPN on 
 
 # // open time
 # <leader> t
