added notes for swapping windows

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -89,6 +89,8 @@ set -g window-active-style 'bg=colour232,fg=colour244' #// active style
 # // to exit a WINDOW just type exit and press enter 
 # $ exit
 
+# // to swap / switch WINDOWS
+# :swap-window -s <src-window-index> -t <target-window-index>
 
 # // PANE 
 
