trying a different tmux status line for remote to simplify

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -39,7 +39,12 @@ set -g status-fg colour244 # grey50
 set -g status-right-length 100
 #set -g status-right "[#(battery Discharge)] %Y-%m%b-%d%a %T %Z"
 set -g status-right "#H %Y-%m%b-%d%a %T %Z"
+#set -g status-right "%Y-%m-%d %T %Z"
 # // note: #H / hostname is weird if you don't have your VPN on 
+
+# for remote linux simplify the status bar
+if-shell "uname | grep -q Linux" "\
+    set -g status-right '%Y-%m-%d %T %Z'; "
 
 # // open time
 # <leader> t
