--- a/.tmux.conf
+++ b/.tmux.conf
@@ -44,7 +44,10 @@ set -g status-right "#H %Y-%m%b-%d%a %T %Z"
 
 # for remote linux simplify the status bar
 if-shell "uname | grep -q Linux" "\
-    set -g status-right '%Y-%m-%d %T %Z'; "
+    set -g window-status-format '#W#F'; \
+    set -g window-status-current-format '#I:#W#F'; \
+    set -g window-status-separator '|'; \
+    set -g status-right '%Y-%m-%d %H:%M%Z'; "
 
 # // open time
 # <leader> t
