--- a/.tmux.conf
+++ b/.tmux.conf
@@ -44,10 +44,12 @@ set -g status-right "#H %Y-%m%b-%d%a %T %Z"
 
 # for remote linux simplify the status bar
 if-shell "uname | grep -q Linux" "\
-    set -g window-status-format '#W#F'; \
-    set -g window-status-current-format '#I:#W#F'; \
+    set -g status-left '[#{session_name}]'; \
+    set -g window-status-format '#W'; \
+    set -g window-status-current-format '#I:#W'; \
+    set -g window-status-current-fg colour255; \
     set -g window-status-separator '|'; \
-    set -g status-right '%Y-%m-%d %H:%M%Z'; "
+    set -g status-right '%Y%m%d %H:%M%Z'; "
 
 # // open time
 # <leader> t
