moving color to the end becuase something broke

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -47,9 +47,9 @@ if-shell "uname | grep -q Linux" "\
     set -g status-left '[#{session_name}]'; \
     set -g window-status-format '#W'; \
     set -g window-status-current-format '#I:#W'; \
-    set -g window-status-current-fg colour255; \
     set -g window-status-separator '|'; \
-    set -g status-right '%Y%m%d %H:%M%Z'; "
+    set -g status-right '%Y%m%d %H:%M%Z'; \
+    set -g window-status-current-fg colour255; "
 
 # // open time
 # <leader> t
