--- a/.tmux.conf
+++ b/.tmux.conf
@@ -49,7 +49,7 @@ if-shell "uname | grep -q Linux" "\
     set -g window-status-current-format '#I:#W'; \
     set -g window-status-separator '|'; \
     set -g status-right '%Y%m%d %H:%M%Z'; \
-    set -g window-status-current-fg colour255; "
+    set -g window-status-current-format '#[fg=colour255]'; "
 
 # // open time
 # <leader> t
