--- a/.tmux.conf
+++ b/.tmux.conf
@@ -46,10 +46,9 @@ set -g status-right "#H %Y-%m%b-%d%a %T %Z"
 if-shell "uname | grep -q Linux" "\
     set -g status-left '[#{session_name}]'; \
     set -g window-status-format '#W'; \
-    set -g window-status-current-format '#I:#W'; \
     set -g window-status-separator '|'; \
     set -g status-right '%Y%m%d %H:%M%Z'; \
-    set -g window-status-current-format '#[fg=colour255]'; "
+    set -g window-status-current-format '#[fg=colour255]#I:#W'; "
 
 # // open time
 # <leader> t
