fixing the color and spacing for tmxu status line

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -36,19 +36,22 @@ set -g status-bg colour234 # grey11
 # // set status bar foreground color
 #set -g status-fg colour255 # grey93
 set -g status-fg colour244 # grey50
+
+set -g window-status-format '#W#F';
+set -g window-status-current-format '#[fg=colour255]#I:#W#F';
+
 set -g status-right-length 100
 #set -g status-right "[#(battery Discharge)] %Y-%m%b-%d%a %T %Z"
-set -g status-right "#H %Y-%m%b-%d%a %T %Z"
-#set -g status-right "%Y-%m-%d %T %Z"
+set -g status-right "#H %Y-%m%b-%d%a #[fg=color255]%T#[fg=color244]%Z"
 # // note: #H / hostname is weird if you don't have your VPN on 
 
 # for remote linux simplify the status bar
 if-shell "uname | grep -q Linux" "\
     set -g status-left '[#{session_name}]'; \
-    set -g window-status-format '#W'; \
+    set -g window-status-format '#W#F'; \
     set -g window-status-separator '|'; \
-    set -g status-right '%Y%m%d %H:%M%Z'; \
-    set -g window-status-current-format '#[fg=colour255]#I:#W'; "
+    set -g status-right '%Y%m%d#[fg=color255]%H:%M#[fg=color244]%Z'; \
+    set -g window-status-current-format '#[fg=colour255]#I:#W#F'; "
 
 # // open time
 # <leader> t
