fixed the tmux status line color to show properly

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -42,7 +42,7 @@ set -g window-status-current-format '#[fg=colour255]#I:#W#F';
 
 set -g status-right-length 100
 #set -g status-right "[#(battery Discharge)] %Y-%m%b-%d%a %T %Z"
-set -g status-right "#H %Y-%m%b-%d%a #[fg=color255]%T#[fg=color244]%Z"
+set -g status-right "#H %Y-%m%b-%d%a #[fg=colour255]%T#[fg=colour244]%Z"
 # // note: #H / hostname is weird if you don't have your VPN on 
 
 # for remote linux simplify the status bar
@@ -50,7 +50,7 @@ if-shell "uname | grep -q Linux" "\
     set -g status-left '[#{session_name}]'; \
     set -g window-status-format '#W#F'; \
     set -g window-status-separator '|'; \
-    set -g status-right '%Y%m%d#[fg=color255]%H:%M#[fg=color244]%Z'; \
+    set -g status-right '%Y%m%d#[fg=colour255]%H:%M#[fg=colour244]%Z'; \
     set -g window-status-current-format '#[fg=colour255]#I:#W#F'; "
 
 # // open time
