removed index from tmux window names

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -38,7 +38,7 @@ set -g status-bg colour234 # grey11
 set -g status-fg colour244 # grey50
 
 set -g window-status-format '#W#F';
-set -g window-status-current-format '#[fg=colour255]#I:#W#F';
+set -g window-status-current-format '#[fg=colour255]#W#F';
 
 set -g status-right-length 100
 #set -g status-right "[#(battery Discharge)] %Y-%m%b-%d%a %T %Z"
@@ -51,7 +51,8 @@ if-shell "uname | grep -q Linux" "\
     set -g window-status-format '#W#F'; \
     set -g window-status-separator '|'; \
     set -g status-right '%Y%m%d#[fg=colour255]%H:%M#[fg=colour244]%Z'; \
-    set -g window-status-current-format '#[fg=colour255]#I:#W#F'; "
+    set -g window-status-current-format '#[fg=colour255]#W#F'; "
+    #set -g window-status-current-format '#[fg=colour255]#I:#W#F'; "
 
 # // open time
 # <leader> t
