--- a/.tmux.conf
+++ b/.tmux.conf
@@ -141,6 +141,20 @@ bind l select-pane -R
 # // alternatively:
 # <leader> x
 
-
 # --- --- ---
+
+# TMUX PLUGIN MANAGER
+# see: https://github.com/tmux-plugins/tpm
+
+set -g @plugin 'tmux-plugins/tpm'
+set -g @plugin 'tmux-plugins/tmux-sensible'
+# // ex:
+# set -g @plugin 'github_username/plugin_name#branch'
+# set -g @plugin 'git@bitbucket.com:user/plugin'
+
+#$ tmux source ~/.tmux.conf
+# <leader> :source ~/.tmux.conf
+
+# // INITIALIZE TMUX plugin manager (keep at bottom of .tmux.conf)
+run '~/.tmux/plugins/tpm/tpm'
 
