added pomodoro to tmux plugins

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -42,7 +42,7 @@ set -g window-status-current-format '#[fg=colour255]#W#F';
 
 set -g status-right-length 100
 #set -g status-right "[#(battery Discharge)] %Y-%m%b-%d%a %T %Z"
-set -g status-right "#H %Y-%m%b-%d%a #[fg=colour255]%T#[fg=colour244]%Z"
+set -g status-right "#H #{pomodoro_status}%Y-%m%b%d%a #[fg=colour255]%T#[fg=colour244]%Z"
 # // note: #H / hostname is weird if you don't have your VPN on 
 
 # for remote linux simplify the status bar
@@ -117,6 +117,9 @@ set -g pane-active-border-style 'bg=colour234,fg=colour5' # purple font
 # // create a new Horizontal PANE
 # <leader> " 
 
+# // Check all tmux key bindings
+# <leader> ?
+
 # // Navigate between PANE 
 # <leader> <left-arrow>|<up-arrow>|<down-arrow>|<right-arrow>
 bind h select-pane -L
@@ -151,6 +154,17 @@ set -g @plugin 'tmux-plugins/tmux-sensible'
 # // ex:
 # set -g @plugin 'github_username/plugin_name#branch'
 # set -g @plugin 'git@bitbucket.com:user/plugin'
+set -g @plugin 'olimorris/tmux-pomodoro-plus'
+set -g @pomodoro_start 'b' # key binding to start <leader> + b
+set -g @pomodoro_cancel 'B'
+set -g @pomodoro_cancel 'B'
+set -g @pomodoro_mins 25 # FOCUS
+set -g @pomodoro_break_mins 5 # BREAK
+set -g @pomodoro_on "#[fg=$text_green]♻️ " 
+set -g @pomodoro_complete "#[fg=$text_red]☑️ " 
+set -g @pomodoro_notifications 'on'
+set -g @pomodoro_sound 'Pop'
+
 
 #$ tmux source ~/.tmux.conf
 # <leader> :source ~/.tmux.conf
