added notes for updating tmux plugins

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -165,9 +165,18 @@ set -g @pomodoro_complete "#[fg=$text_red]☑️ "
 set -g @pomodoro_notifications 'on'
 set -g @pomodoro_sound 'Pop'
 
-
+# RELOAD tmux environment with plugins
 #$ tmux source ~/.tmux.conf
 # <leader> :source ~/.tmux.conf
+
+# INSTALL plugins
+# <leader> I
+
+# UPDATE plugins
+# <leader> U
+
+# UNINSTALL plugins
+# <leader> alt u
 
 # // INITIALIZE TMUX plugin manager (keep at bottom of .tmux.conf)
 run '~/.tmux/plugins/tpm/tpm'
