added tmux restore plugin

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -150,7 +150,10 @@ bind l select-pane -R
 # see: https://github.com/tmux-plugins/tpm
 
 set -g @plugin 'tmux-plugins/tpm'
-set -g @plugin 'tmux-plugins/tmux-sensible'
+set -g @plugin 'tmux-plugins/tmux-sensible' # basic tmux settings
+set -g @plugin 'tmux-plugins/tmux-resurrect' # to save sessions accross system restarts
+# <leader> ctrl+s // to save
+# <leader> ctrl+r // to restore
 # // ex:
 # set -g @plugin 'github_username/plugin_name#branch'
 # set -g @plugin 'git@bitbucket.com:user/plugin'
