added missing setup info for tmux plugins

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -148,6 +148,9 @@ bind l select-pane -R
 
 # TMUX PLUGIN MANAGER
 # see: https://github.com/tmux-plugins/tpm
+# []- clone repo: Tmux Plugin Manager (tpm)
+# $ git clone https://github.com/tmux-plugins/tpm ~/.tmux/plugins/tpm
+# // should create the ~/.tmux/ directory and allow for plugin installs
 
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible' # basic tmux settings
