changed the shell to display the directories in something more readable in tmux

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -82,7 +82,11 @@ if-shell "uname | grep -q Linux" "\
 # // settings 
 set -g base-index 1
 set -g window-style 'bg=colour234,fg=colour247' #// inactive style
+# colour 234 = grey11
+# colour 247 = grey62
 set -g window-active-style 'bg=colour232,fg=colour244' #// active style
+# color 232 = grey3
+# color 244 = grey50
 
 # // create a new window
 # <leader> c
