--- a/.tmux.conf
+++ b/.tmux.conf
@@ -25,6 +25,9 @@ if-shell "uname | grep -q Darwin" "\
 # <leader> [ 
 # // to exit just press 'q' or 'esc' or ctrl+c if that doesn't work
 
+# // to use vim search commands when in tmux scroll mode
+set-window-option -g mode-keys vi
+
 
 # // STATUS BAR
 
