--- a/.tmux.conf
+++ b/.tmux.conf
@@ -46,7 +46,7 @@ set -g window-status-current-format '#[fg=colour255]#W#F';
 set -g status-right-length 100
 #set -g status-right "[#(battery Discharge)] %Y-%m%b-%d%a %T %Z"
 #set -g status-right "#H #{pomodoro_status}%Y-%m%b%d%a #[fg=colour255]%T#[fg=colour244]%Z"
-set -g status-right "#H #{pomodoro_status}%Y-%m%dw%a #[fg=colour255]%T#[fg=colour244]%Z"
+set -g status-right "#H #{pomodoro_status}%Y-%m%dw%W%a #[fg=colour255]%T#[fg=colour244]%Z"
 # // note: #H / hostname is weird if you don't have your VPN on 
 # // note: strftime python used for datetime codes
 
