--- a/.tmux.conf
+++ b/.tmux.conf
@@ -53,10 +53,10 @@ set -g status-right "#H #{pomodoro_status}%Y-%m%dw%W%a #[fg=colour255]%H%M:%S#[f
 
 # for remote linux simplify the status bar
 if-shell "uname | grep -q Linux" "\
-    set -g status-left '[#{session_name}]'; \
+    set -g status-left '#{session_name};'; \
     set -g window-status-format '#W#F'; \
-    set -g window-status-separator '|'; \
-    set -g status-right '%Y%m%d#[fg=colour255]%H:%M#[fg=colour244]%Z'; \
+    set -g window-status-separator '.'; \
+    set -g status-right '%Y%m%d#[fg=colour255]%H%M#[fg=colour244]%Z'; \
     set -g window-status-current-format '#[fg=colour255]#W#F'; "
     #set -g window-status-current-format '#[fg=colour255]#I:#W#F'; "
 
