--- a/.tmux.conf
+++ b/.tmux.conf
@@ -162,6 +162,18 @@ bind l select-pane -R
 # $ git clone https://github.com/tmux-plugins/tpm ~/.tmux/plugins/tpm
 # // should create the ~/.tmux/ directory and allow for plugin installs
 
+# Enable mouse interactions on tmux
+set-option -g mouse on
+
+# Resize pane to the left
+bind-key -n C-h resize-pane -L 5
+# Resize pane to the downward
+bind-key -n C-j resize-pane -D 5
+# Resize pane to the upward
+bind-key -n C-k resize-pane -U 5
+# Resize pane to the right
+bind-key -n C-l resize-pane -R 5
+
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible' # basic tmux settings
 set -g @plugin 'tmux-plugins/tmux-resurrect' # to save sessions accross system restarts
