better status name for linux

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -53,7 +53,7 @@ set -g status-right "#H #{pomodoro_status}%Y-%m%dw%W%a #[fg=colour255]%H%M:%S#[f
 
 # for remote linux simplify the status bar
 if-shell "uname | grep -q Linux" "\
-    set -g status-left '#{session_name};'; \
+    set -g status-left '#{session_name}_'; \
     set -g window-status-format '#W#F'; \
     set -g window-status-separator ' '; \
     set -g status-right '%Y%m%d#[fg=colour255]%H%M#[fg=colour244]%Z'; \
