--- a/.tmux.conf
+++ b/.tmux.conf
@@ -40,6 +40,7 @@ set -g status-bg colour234 # grey11
 #set -g status-fg colour255 # grey93
 set -g status-fg colour244 # grey50
 
+set -g status-left '#{session_name}_';
 set -g window-status-format '#W#F';
 set -g window-status-current-format '#[fg=colour255]#W#F';
 
