--- a/.tmux.conf
+++ b/.tmux.conf
@@ -41,6 +41,8 @@ set -g status-bg colour234 # grey11
 set -g status-fg colour244 # grey50
 
 set -g status-left '#{session_name}_';
+#// #W = window name
+#// #F = window flags
 set -g window-status-format '#W#F';
 set -g window-status-current-format '#[fg=colour255]#W#F';
 
