minor improvements to tmux setup

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,5 +1,9 @@
 # // TMUX
 
+#// enable <leader> r to reload tmuk
+unbind r
+bind r source-file ~/.tmux.conf
+
 # --- --- ---
 
 # // change <leader> / <prefix> key to backtick only for MAC
@@ -89,7 +93,8 @@ if-shell "uname | grep -q Linux" "\
 # // WINDOW 
 
 # // settings 
-set -g base-index 1
+set -g base-index 1 #// windows not start at zero index
+set -g renumber-windows on #// windows 1,2(x),3 -> 1,2 not 1,3
 set -g window-style 'bg=colour234,fg=colour247' #// inactive style
 # colour 234 = grey11
 # colour 247 = grey62
